[project]
name = "desktop-automation-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.0",
    "fastmcp>=2.13.1",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "plyer>=2.1.0",
    "psutil>=7.1.3",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "pyttsx3>=2.99",
    "pywinauto>=0.6.9",
    "sentence-transformers>=5.1.2",
]
